stave-macros/tests/fail/builder_required_and_optional.rs
use stave_macros::builder;

#[builder]
struct Widget {
    #[stave(required, optional)]
    name: String,
}

fn main() {}
